# ETHDenverProject

./: .envrc  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  TEAM_FILE_GUIDE.md  flake.nix  package-lock.json  terms.md
.circleci/: Makefile  config.yml
nix/: overlays.nix  shell.nix
project/: .env  .gitignore  ARCHITECTURE.md  Makefile  NOTICES  SECURITY.md  build.gradle.kts  compose.yaml  copy_external_dirs.sh  links.csv  (+2 more)
sdk/: .envrc  .gitignore  Makefile  README.md  pyproject.toml  vale.ini
sdk/.sphinx/: conf.py
sdk/.sphinx/exts/: pygments_daml_lexer.py  ref.py
sdk/docs/: index.rst
sdk/docs/development/: 001-logging-style.md  002-testing.md
sdk/docs/scripts/: generate-pdf-docs.sh
sdk/docs/sharable/sdk/quickstart/: index.rst
sdk/docs/sharable/sdk/quickstart/configure/: dev-journey-in-cnqs-lifecycle.rst  development-lifecycle.rst  index.rst  project-structure-overview.rst
sdk/docs/sharable/sdk/quickstart/download/: cnqs-installation.rst
sdk/docs/sharable/sdk/quickstart/observe/: observability-troubleshooting-overview.rst
sdk/docs/sharable/sdk/quickstart/operate/: explore-the-demo.rst  index.rst  introduction-to-splice-in-cn.rst  json-api.rst  lnav-in-cn.rst
sdk/docs/sharable/sdk/quickstart/secure/: keycloak-in-cnqs.rst
sdk/docs/sharable/sdk/quickstart/troubleshoot/: cnqs-faq.rst
sdk/docs/sharable/sdk/quickstart/upgrade/: upgrades-on-global-sync.rst
sdk/docs/user/: 001-observability.md  002-topology.md
sdk/styles/DigitalAsset/: SentenceCaseHeadings.yml  Terms.yml
sdk/styles/config/vocabularies/DA/: accept.txt
(+288 files in other folders)
