[tool.poetry]
name = "docs-website"
version = "0.0.0"
description = ""
authors = ["Digital Asset <docs@digitalasset.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "8.1.3"
sphinx-autobuild = "2024.10.03"
sphinx-copybutton = "0.5.2"
sphinx-tabs = "3.4.7"
sphinxcontrib-applehelp = "2.0.0"
sphinxcontrib-devhelp = "2.0.0"
sphinxcontrib-htmlhelp = "2.1.0"
sphinxcontrib-mermaid = "1.0.0"
sphinxcontrib-serializinghtml = "2.0.0"
sphinxcontrib-qthelp = "2.0.0"
sphinxext-remoteliteralinclude = "0.5.0"
sphinx-external-toc = "1.0.1"
sphinx-togglebutton = "0.3.2"
flit = "3.10.1"
dacite = "1.8.1"
beautifulsoup4 = "4.12.3"
sphinxcontrib-youtube = "1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
